--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,7 +1,8 @@
-<template bindable="router">
+<template>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!-- <require from="paulvanbladel/aurelia-auth"></require> -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle Navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -13,11 +14,20 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-          <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title}</a>
-        </li>
+          <li repeat.for="row of router.navigation | authFilter: isAuthenticated" class="${row.isActive ? 'active' : ''}">
+            <a data-toggle="collapse" data-target="#bs-example-navbar-collapse-1.in" href.bind="row.href">${row.title}</a>
+          </li>
+        </ul>
+
+      <ul if.bind="!isAuthenticated" class="nav navbar-nav navbar-right">
+      <li><a href="/#/login">Login</a></li>
+      <li><a href="/#/signup">Sign up</a></li>
+
+      </ul>
+      <ul if.bind="isAuthenticated" class="nav navbar-nav navbar-right">
+        <li><a href="/#/logout">Logout</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
